Fixed z-index issue of social icons

--- a/src/scss/_Navbar.scss
+++ b/src/scss/_Navbar.scss
@@ -2,7 +2,7 @@
 * @Author: Gavin
 * @Date:   2021-01-30 01:56:32
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-02-07 05:06:08
+* @Last Modified time: 2021-02-07 07:13:04
 */
 
 .navbar {
@@ -59,6 +59,7 @@
             display: flex;
             justify-content: space-between;
             flex-direction: column;
+            z-index: 999;
 
             @media screen and (max-width: 47.8125em) {
                 visibility: visible;
@@ -130,6 +131,7 @@
         cursor: pointer;
         display: none;
         position: relative;
+        z-index: 999;
 
         @media screen and (max-width: 47.8125em) {
             display: flex;
